Rostislav / WALL-1986 / Alignment issues in Transfer limit message (#10376)
* fix: align

* fix: appearance, but different

* fix: appearance, but yet again different

* refactor: a bunch more blank lines in css for readibility

--- a/packages/cashier/src/components/crypto-fiat-converter/crypto-fiat-converter.scss
+++ b/packages/cashier/src/components/crypto-fiat-converter/crypto-fiat-converter.scss
@@ -2,9 +2,10 @@
     display: grid;
     grid-template-columns: 1fr auto 1fr;
     grid-gap: 0.8rem;
+
     @include desktop {
         max-width: 36rem;
-        margin: 0 auto 2.4rem;
+        margin: 0 auto;
         .dc-icon {
             margin-top: 1rem;
         }
@@ -13,6 +14,7 @@
             margin-bottom: unset;
         }
     }
+
     @include mobile {
         display: flex;
         flex-direction: column;
@@ -28,6 +30,7 @@
             margin: 1.4rem;
         }
     }
+
     .input-group {
         display: flex;
 
@@ -36,10 +39,15 @@
             margin-left: -4rem;
         }
     }
+
     &__hint {
         grid-column: 3;
         margin-left: 0;
         color: var(--text-less-prominent);
         align-self: start;
+    }
+
+    .dc-input__hint {
+        margin: 0.1rem 0 0 1.3rem;
     }
 }
